[package]
name = "az_token_sale_to_airdrop"
version = "0.1.0"
authors = ["DIBS"]
edition = "2021"

[profile.release]
# https://github.com/rust-lang/rust/issues/78744
# Disable integer overflow checks.
overflow-checks = false

[dependencies]
ink = { version = "4.3", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "4.0.0", default-features = false, features = ["psp22"] }
primitive-types = { version = "0.12.2", default-features = false, features = ["scale-info"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
az_airdrop = { path = "../az_airdrop", default-features = false, features = ["ink-as-dependency"] }
az_button = { path = "../az_button", default-features = false, features = ["ink-as-dependency"] }
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
