[package]
name = "az_button"
version = "3.0.0"
edition = "2021"
authors = ["btn.group"]

[dependencies]
ink = { version = "4.3.0", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "4.0.0", default-features = false, features = ["psp22"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
